--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <nav class="navigation"> 
         <a class="logo" href="./index.html">Web<span class="logoweb">Studio</span></a>
         <ul class="main_menu">
-            <li><a href="./index.html" class="link">Studio</a></li>
+            <li ><a href="./index.html" class="link-studio">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a> </li>
             </ul>
@@ -327,10 +327,44 @@
 </main>
 
    <footer class="footer" >
-    <div class="container" >
+<div class="container container_footer" >
     <a   class="logo-footer"  href="./index.html">Web<span class="web-footer">Studio</span></a>
-   <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</div>   
+    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div> 
+    <div  class="container_soc">
+    <p class="social-footer">Social media</p>
+    <ul class="social_media">
+    <li class="social_media_item">
+        <a href="" class="social_media_link">
+            <svg class="icon_social_media" width="16" heigth="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="social_media_item">
+        <a href="" class="social_media_link">
+            <svg class="icon_social_media"  width="16" heigth="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="social_media_item">
+        <a href="" class="social_media_link">
+            <svg class="icon_social_media"  width="16" heigth="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="social_media_item">
+        <a href="" class="social_media_link">
+            <svg class="icon_social_media"  width="16" heigth="16">
+                <use href="./images/icons.svg#icon-linkedin-1" ></use>
+            </svg>
+        </a>
+    </li>
+   </ul>
+</div>
+  
 </footer>
 
             
