--- a/index.html
+++ b/index.html
@@ -328,43 +328,44 @@
 
    <footer class="footer" >
 <div class="container container_footer" >
+<div>
     <a   class="logo-footer"  href="./index.html">Web<span class="web-footer">Studio</span></a>
     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</div> 
+</div>
     <div  class="container_soc">
     <p class="social-footer">Social media</p>
     <ul class="social_media">
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media" width="16" heigth="16">
+            <svg class="icon_social_media" width="24" heigth="24">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="16" heigth="16">
+            <svg class="icon_social_media"  width="24" heigth="24">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="16" heigth="16">
+            <svg class="icon_social_media"  width="24" heigth="24">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="16" heigth="16">
+            <svg class="icon_social_media"  width="24" heigth="24">
                 <use href="./images/icons.svg#icon-linkedin-1" ></use>
             </svg>
         </a>
     </li>
    </ul>
 </div>
-  
+</div> 
 </footer>
 
             
