--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
    <footer class="footer" >
 <div class="container container_footer" >
-<div>
+<div class="footer_logo_text">
     <a   class="logo-footer"  href="./index.html">Web<span class="web-footer">Studio</span></a>
     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </div>
@@ -337,28 +337,28 @@
     <ul class="social_media">
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media" width="24" heigth="24">
+            <svg class="icon_social_media" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="24" heigth="24">
+            <svg class="icon_social_media"  width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="24" heigth="24">
+            <svg class="icon_social_media"  width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
         </a>
     </li>
     <li class="social_media_item">
         <a href="" class="social_media_link">
-            <svg class="icon_social_media"  width="24" heigth="24">
+            <svg class="icon_social_media"  width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin-1" ></use>
             </svg>
         </a>
