--- a/index.html
+++ b/index.html
@@ -46,24 +46,32 @@
     <div class="container" >
         <ul class="icon-list">
             <li class="icon-item">
+                <div class="icon_container">
                 <svg  width="64" height="64">
                     <use href="./images/icons.svg#icon-antenna-1"> </use>
                 </svg>
+            </div>
             </li>
             <li class="icon-item">
+            <div class="icon_container">
                 <svg  width="64" height="64">
                    <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
+            </div>
             </li>
             <li class="icon-item">
+            <div class="icon_container">
                 <svg  width="64" height="64">
                     <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
+            </div>
             </li>
             <li class="icon-item">
+            <div class="icon_container">
                 <svg  width="64" height="64">
                     <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
+            </div>
             </li>
         </ul>
         <h2 class="visually-hidden">1</h2>
