--- a/index.html
+++ b/index.html
@@ -269,50 +269,85 @@
 <h2 class="title-team">Our Portfolio</h2>
 <ul class="portfolio">
     <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio.jpg" alt="Banking app"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+    </div>
+    
         <div class="product-recenzive">
         <h3 class="product">Banking App</h3>
         <p class="recenzive">App</p>
     </div>
     </li>
     <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio2.jpg" alt="paymant"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+    </div>
     <div class="product-recenzive">
         <h3 class="product">Cashless Payment</h3>
         <p class="recenzive">Marketing</p>
     </div>
-    </li> <li class="portfolio-item">
+    </li> 
+    <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio3.jpg" alt="notebook"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+    </div>
         <div class="product-recenzive">
         <h3 class="product">Meditation App</h3>
         <p class="recenzive">App</p>
     </div>
-    </li> <li class="portfolio-item">
+    </li> 
+    <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio4.jpg" alt="taxi draiver"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+        
         <div class="product-recenzive">
         <h3 class="product">Taxi Service </h3>
         <p class="recenzive">Marketing</p>
     </div>
-    </li> <li class="portfolio-item">
+    </li> 
+    <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio5.jpg" alt="phone"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+    </div>
         <div class="product-recenzive">
         <h3 class="product">Screen Illustrations</h3>
         <p class="recenzive">Design</p>
     </div>
-    </li> <li class="portfolio-item">
+    </li> 
+    <li class="portfolio-item">
+        <div class="container_wrap">
         <img src="./images/portfolio6.jpg" alt="girl chill"
         width="360"
         height="300">
+        <div class="container_image">
+            <p class="text_wrap">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+    </div>
         <div class="product-recenzive">
         <h3 class="product">Online Courses</h3>
         <p class="recenzive">Marketing</p>
